<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:padding="5dp"
    android:background="@color/colorAshText">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/log" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="220dp"
                    android:fontFamily="@font/neo_latina"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="245dp"
                    android:fontFamily="monospace"
                    android:text="@string/estd"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="275dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/libr"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="6dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:clickable="true"
                            android:focusable="true"
                            android:textSize="14sp"
                            android:text="@string/picasso"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="35dp"
                            android:textColor="@color/pureBlue"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:clickable="true"
                            android:focusable="true"
                            android:textSize="14sp"
                            android:text="@string/okhttp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="60dp"
                            android:textColor="@color/pureBlue"/>
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="385dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/licence"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="6dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:clickable="true"
                            android:focusable="true"
                            android:textSize="14sp"
                            android:text="@string/apache"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="35dp"
                            android:textColor="@color/pureBlue"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:clickable="true"
                            android:focusable="true"
                            android:textSize="14sp"
                            android:text="@string/mit"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="60dp"
                            android:textColor="@color/pureBlue"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="495dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/credits"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="6dp"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:fontFamily="monospace"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autoLink="all"
                            android:clickable="true"
                            android:focusable="true"
                            android:textSize="14sp"
                            android:text="@string/music"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="50dp"
                            android:textColor="@color/pureBlue"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvDeveloper"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="605dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/colorAccent"
                            android:text="@string/developed"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="45dp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/colorAccent"
                            android:text="@string/myname"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="70dp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/colorAccent"
                            android:text="@string/clgname"/>


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="715dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:gravity="center_horizontal"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:id="@+id/llShare"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:gravity="center_horizontal"
                                android:layout_marginEnd="30dp">
                                <ImageView

                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_share"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="18sp"
                                    android:padding="3dp"
                                    android:text="@string/share"/>
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/llRate"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:gravity="center_horizontal"
                                android:layout_marginStart="30dp">
                                <ImageView
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
                                    android:src="@drawable/ic_star"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="18sp"
                                    android:padding="3dp"
                                    android:text="@string/rate"/>
                            </LinearLayout>
                        </LinearLayout>


                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/copy_right"
                    android:textColor="@color/colorAshText"
                    android:textSize="12sp" />
            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>



</android.support.design.widget.CoordinatorLayout>